<resources>
    <string name="app_name">LoginAndRegistration</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm Password</string>
    <string name="register">Register</string>
    <string name="logout">LogOut</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="passwords_don_t_match">Passwords Don\'t Match</string>
</resources>
