<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/sign_up_activity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/editBackgroundAlmostGrey">


    <EditText
        android:singleLine="true"
        android:layout_marginTop="50dp"
        android:id="@+id/name"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@color/backgroundForFields"
        />


    <EditText
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_below="@+id/name"
        android:maxLength="20"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@color/backgroundForFields"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/user_name"
        android:textSize="20sp"
        android:background="@color/backgroundForFields"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@color/backgroundForFields"
        />



    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm"
        android:layout_below="@+id/password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@color/backgroundForFields"
        />

    <TextView
        android:id="@+id/passwords_not_equal"
        android:text="Passwords Don't Match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/buttonBackground"
        android:visibility="invisible"
        android:layout_below="@+id/confirm_password"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginStart="22dp"
        android:layout_below="@+id/passwords_not_equal"
        android:layout_centerHorizontal="true"
        android:background="@color/buttonBackground"
        />



</RelativeLayout>